# fulltime-plugin-api

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  RELEASING.md  SECURITY.md  cliff.toml
.github/: dependabot.yaml
.github/workflows/: ci.yaml  prepare-release.yaml  release.yaml  tag-release.yaml
docs/: plugin-authoring.md
openspec/changes/add-host-fetch-capability/: design.md  proposal.md  tasks.md
openspec/changes/add-host-fetch-capability/specs/data-provider-plugin-api/: spec.md
openspec/changes/add-plugin-build-metadata/: design.md  proposal.md  tasks.md
openspec/changes/add-plugin-build-metadata/specs/plugin-manifest-format/: spec.md
openspec/changes/archive/2026-07-19-define-league-data-contract/: design.md  tasks.md
openspec/changes/archive/2026-07-19-define-league-data-contract/specs/plugin-manifest-format/: spec.md
openspec/changes/archive/2026-07-21-add-plugin-build-metadata/: tasks.md
openspec/changes/define-league-data-contract/: proposal.md  tasks.md
openspec/changes/define-league-data-contract/specs/data-provider-plugin-api/: spec.md
openspec/changes/define-league-data-contract/specs/league-data-schema/: spec.md
openspec/specs/data-provider-plugin-api/: spec.md
openspec/specs/host-fetch-capability/: spec.md
openspec/specs/league-data-schema/: spec.md
openspec/specs/plugin-manifest-format/: spec.md
src/: bindings.rs  lib.rs  manifest.rs  version.rs
tests/: bundesliga_shape.rs
tests/fixtures/: manifest.toml
wit/: data-provider.wit
(+1 files in other folders)
