[package]
name = "fulltime-plugin-api"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "Canonical league-data schema, data-provider WIT interface, and plugin manifest format shared by the FullTime plugin host and data-provider plugins."
license = "MIT"
repository = "https://github.com/pilgrimagesoftware/fulltime-plugin-api"
readme = "README.md"
keywords = ["fulltime", "plugin", "wasm", "football"]
categories = ["data-structures"]
authors = ["Paul Schifferer <paul@schifferers.net>"]
exclude = [".github/*", ".gitignore"]

[dependencies]
serde = { version = "1.0.229", default-features = false, features = ["derive", "std"] }
thiserror = { version = "2.0.19", default-features = false, features = ["std"] }
wit-bindgen = { version = "0.59.0", default-features = false, features = ["macros", "std"] }
toml = { version = "1.1", default-features = false, features = ["std", "serde", "parse", "display"] }

[dev-dependencies]
serde_json = "1.0.150"
proptest = "1"
